syntax = "proto3";

option go_package = "protos/messages";


message JoinArgs {
  string IP = 1;
  int32 port = 2;
  repeated string files = 3;
}
