syntax = "proto3";

option go_package = "protos/messages";

message LeaveArgs {
  string peer_id = 1;
}