syntax = "proto3";

option go_package = ".";

message SearchResponse {
  repeated string available_peers = 1;
}
