syntax = "proto3";

option go_package = "protos/messages";

message UpdateArgs {
  repeated string new_file = 1;
}
